--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,18 +1,43 @@
 .content{
     font-family: 'Playfair Display', serif;
     color:#FFFFFF;
-    height: 100%;
+    height: 856px;
     background-color: #282828;
     text-align: center;
+    padding: 100px 0 0 0 ;
 
 }
 
 .title{
-    font-size: 36px;
-    padding: 160px 540px 0 540px;
+    position: relative;
+    display: inline-block;
+    font-size:22px;
+    margin: 60px 190px 0 190px;   
+}
+
+.title:after{
+    content:"";
+    position: absolute;
+    bottom: -40px;
+    left: 70%;
+    width: 20%;
+    height: 1px;
+    margin-left:-30%;
+    background: #FFFFFF;
 }
 
 .text{
     font-size: 16px;
-    padding: 80px 540px 0 540px;
+    padding: 80px 190px 0 190px;
+}
+
+.svg{
+    padding: 50px 0 60px 0px;
+}
+
+.contentBox{
+    position: relative;
+    display: inline-block;
+    width: 1100px;
+    border:1px solid #C4C4C4;
 }
